Remove remaining JFoenix args